# numToHex

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.user.96cd04c  README.md  main.cpp
test/: CMakeLists.txt  libTest.cpp  main.cpp
